test_suite/alan-2022-examples/failing/002490_mutation.alan
source p496 begin a := array, end
